--- a/src/app/spending/spending.component.css
+++ b/src/app/spending/spending.component.css
@@ -2,3 +2,9 @@ canvas {
   margin-top: 25px;
   position: relative !important;
 }
+
+.noSpending {
+  border:1px solid #ccc;
+  text-align: center;
+  padding: 2em;
+}
