--- a/src/app/manage-budget/manage-budget.component.html
+++ b/src/app/manage-budget/manage-budget.component.html
@@ -78,9 +78,9 @@
 <!-- Set Income dialog -->
 <ng-template #setIncomeDialog>
   <mat-dialog-actions align="end">
-    <i class="fa fa-times" matDialogClose="yes" style="font-size:24px;margin-top:-35px;"></i>
+    <i class="fa fa-times" matDialogClose="yes" style="font-size:24px;margin-top:-50px;"></i>
   </mat-dialog-actions>
-  <h1 style="padding:.5em .7em;margin-top:-70px;">Income</h1>
+  <h1 style="padding:.5em .7em;margin-top:-50px;margin-right:50px;">Monthly Income</h1>
   <div class="container-fluid justify-content-center">
       <form>
           <div class="col-12" style="margin-top:15px;">
