[#34] Added functionality to edit budget items

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -75,7 +75,7 @@
         Amount:
       </div>
       <div class="col-12">
-        <input type="text" formControlName="incomeAmount">
+        <input type="number" formControlName="incomeAmount">
       </div>
       <div class="col-12">
         Date:
@@ -106,7 +106,7 @@
         Amount:
       </div>
       <div class="col-12">
-        <input type="text" formControlName="transactionAmount">
+        <input type="number" formControlName="transactionAmount">
       </div>
       <div class="col-12 mt-3">
         Category:
@@ -126,7 +126,7 @@
       <span style="color:red;width:100%;padding:1em;"> {{ errorMessage }} </span>
       <div class="col-12 mt-2">
         <button style="float:right;" (click)="addTransaction()">Add</button>
-        <button style="float:right;margin-right:15px;" matDialogClose="yes">Close</button>
+        <button style="float:right;margin-right:15px;" matDialogClose="yes">Cancel</button>
       </div>
     </form>
   </div>
