--- a/src/app/manage-budget/manage-budget.component.html
+++ b/src/app/manage-budget/manage-budget.component.html
@@ -18,7 +18,7 @@
               <th>Category</th>
               <th style="border-right:none;">Projected</th>
               <tr *ngFor="let budget of budgetItems">
-                <td>{{ budget.category }}</td>
+                <td><a [routerLink]=""(click)="showEditBudgetDialog(budget)" class="budget-item">{{ budget.category }}</a></td>
                 <td style="border-right:none;" class="money">{{ budget.amount | currency}}</td>
                 <td style="text-align:center;border-left: none;"><a [routerLink]="" (click)="deleteBudgetItem(budget)">Remove</a></td>
               </tr>
@@ -58,7 +58,7 @@
               Amount:
           </div>
           <div class="col-12">
-              <input type="text" [(ngModel)]="budgetAmount" name="budgetAmount">
+              <input type="number" [(ngModel)]="budgetAmount" name="budgetAmount">
               <span style="color:red;width:50px;"> {{ errorMessage }} </span><br>
           </div>
           <div class="col-12 mt-3">
@@ -69,8 +69,31 @@
                 <option *ngFor="let category of categories" [ngValue]="category"> {{ category.title }} </option>
             </select>
             <a [routerLink]="" (click)="showCategoryDialog()">Manage Categories</a>
-            <button style="float:right;margin-top:5px;" (click)="addBudgetItem()">Add</button>
+            <button style="float:right;margin-top:25px;" (click)="addBudgetItem()">Add</button>
         </div>
+      </form>
+  </div>
+</ng-template>
+
+<!-- Edit Budget Dialog -->
+<ng-template #editBudgetDialog>
+  <mat-dialog-actions align="end">
+    <i class="fa fa-times" matDialogClose="yes" style="font-size:24px;margin-top:-50px;"></i>
+  </mat-dialog-actions>
+  <h1 style="padding:.5em .7em;margin-top:-50px;margin-right:50px;">Edit {{budgetToEdit.category}} Budget</h1>
+  <div class="container-fluid justify-content-center">
+      <form>
+          <div class="col-12" style="margin-top:15px;">
+              Amount:
+          </div>
+          <div class="col-12">
+            <form [formGroup]="editBudgetForm">
+              <input type="number" formControlName="budgetAmount">
+              <span style="color:red;width:50px;"> {{ errorMessage }} </span><br>
+              <button style="float:right;margin-top:25px;" (click)="updateBudgetItem()">Update</button>
+              <button style="float:right;margin-top:25px;margin-right:25px;" mat-dialog-close="true">Cancel</button>
+            </form>
+          </div>
       </form>
   </div>
 </ng-template>
@@ -87,7 +110,7 @@
               Amount:
           </div>
           <div class="col-12">
-              <input type="text" [(ngModel)]="monthlyIncome" name="monthlyIncome">
+              <input type="number" [(ngModel)]="monthlyIncome" name="monthlyIncome">
               <span style="color:red;width:50px;"> {{ errorMessage }} </span><br>
               <button style="float:right;margin-top:5px;" (click)="updateIncome()">Update</button>
           </div>
